--- a/src/templates/attacks.yml
+++ b/src/templates/attacks.yml
@@ -3,6 +3,12 @@ beat:
     - "{{author}} gives {{mentions}} a beating."
   single:
     - "{{author}} gives a beating."
+crab:
+  mentions:
+    - "{{author}} sends a crab to {{mentions}}."
+  single:
+    - "{{author}} gets knocked out by a crab."
+  precursor: angrycrab
 kill:
   mentions:
     - "{{author}} kills {{mentions}}!"
@@ -10,6 +16,7 @@ kill:
   single:
     - "{{author}} was killed."
     - "{{author}} killed themselves."
+  precursor: krillspot
 ko:
   mentions:
     - "{{author}} knocks {{mentions}} out!"
@@ -31,6 +38,7 @@ launch:
     - "{{mentions}} was launched by {{author}}. See ya!"
   single:
     - "{{author}} launches themselves."
+  precursor: prelaunch
 roast:
   mentions:
     - "{{author}} roasts {{mention}}."
